Remove start page. Add indicators and groupings pages. Create full build script. copy-ui-to-ucc-app.sh renames instances of 'my-splunk-app' in xml and html files.

--- a/TA_CTIS_TAXII_ES_AR/package/appserver/templates/groupings.html
+++ b/TA_CTIS_TAXII_ES_AR/package/appserver/templates/groupings.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>
-        MySplunkApp Demo App
+        Groupings
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -20,7 +20,7 @@
     </script>
 
     <%
-    page_path = "/static/app/my-splunk-app/pages/" + page + ".js"
+    page_path = "/static/app/TA_CTIS_TAXII_ES_AR_2/pages/" + page + ".js"
     %>
 
     <script src="${make_url(page_path)}"></script>
