--- a/TA_CTIS_TAXII_ES_AR/package/default/data/ui/views/submissions.xml
+++ b/TA_CTIS_TAXII_ES_AR/package/default/data/ui/views/submissions.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
-<view template="TA_CTIS_TAXII_ES_AR_2:/templates/submissions.html" type="html">
+<view template="TA_CTIS_TAXII:/templates/submissions.html" type="html">
 	<label>Submissions</label>
 </view>
